--- a/index.html
+++ b/index.html
@@ -64,14 +64,28 @@
     canvas { position: absolute; inset: 0; z-index: -1; }
 
     .final-text {
-      font-size: 52px; font-weight: bold; color: #ff4da6; text-shadow: 0 0 20px #ff99cc, 0 0 40px #ff1a75; animation: pulse 2s infinite; padding: 20px;
-    }
+  position: absolute;
+  bottom: 40px;          /* distance from bottom of video */
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 42px;
+  font-weight: bold;
+  color: #ff4da6;
+  text-shadow: 0 0 20px #ff99cc, 0 0 40px #ff1a75;
+  animation: fadeUp 2s ease, pulse 2s infinite 2s;
+  padding: 10px 20px;
+}
 
     .heart { position: absolute; bottom: -20px; font-size: 22px; animation: floatUp linear infinite; opacity: 0.7; }
 
     @keyframes floatUp { from { transform: translateY(0) scale(1); } to { transform: translateY(-110vh) scale(1.6); opacity: 0; } }
     @keyframes fadeIn { from { opacity: 0; transform: translateY(30px); } to { opacity: 1; transform: translateY(0); } }
     @keyframes pulse { 0%,100%{transform:scale(1);} 50%{transform:scale(1.1);} }
+    @keyframes fadeUp {
+  from { opacity: 0; transform: translate(-50%, 30px); }
+  to { opacity: 1; transform: translate(-50%, 0); }
+}
+
   </style>
 </head>
 
